Add styles to header

--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,95 @@ body {
 
 .header {
     grid-area: header;
+    padding: 20px 50px 20px 30px;
+}
+
+.header-top {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.search-bar input {
+    background-color: var(--background-color);
+    border: none;
+    border-radius: 15px;
+    padding: 4px 10px;
+    width: 450px;
+}
+
+.search-bar, .profile {
+    display: flex;
+    align-items: center;
+}
+
+.search-bar {
+    gap: 15px;
+}
+
+.profile {
+    justify-self: end;
+    gap: 20px;
+}
+
+.profile span {
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+.profile .profile-photo {
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    background-color: var(--secondary-color);
+}
+
+.header-bottom {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.header-bottom .welcome {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.welcome .profile-photo {
+    width: 60px;
+    height: 60px;
+    border-radius: 50px;
+    background-color: var(--secondary-color);
+}
+
+.header-bottom .welcome-message {
+    display: flex;
+    flex-direction: column;
+    font-weight: 700;
+    font-size: 1.1rem;
+}
+
+.header-bottom .welcome-message span:first-child{
+    font-size: 0.8rem;
+}
+
+.header-bottom .actions {
+    justify-self: end;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.header-bottom .actions button {
+    border: none;
+    border-radius: 25px;
+    padding: 12px 24px;
+    background-color: var(--primary-color);
+    color: white;
+    font-family: inherit;
+    font-size: 0.8rem;
+    font-weight: 700;
+    cursor: pointer;
 }
 
 .main-content {
