--- a/styles.css
+++ b/styles.css
@@ -68,13 +68,14 @@ body {
 .sidebar .logo {
     display: flex;
     align-items: center;
-    font-size: 0.8rem;
+    font-size: .9rem;
     gap: 10px;
 }
 
 .sidebar-main > div, .sidebar-secondary > div {
     display: flex;
     align-items: center;
+    font-size: 1.1rem;
 }
 
 .sidebar-main > div:not(div:last-child), .sidebar-secondary > div:not(div:last-child) {
@@ -99,8 +100,8 @@ body {
     background-color: var(--background-color);
     border: none;
     border-radius: 15px;
-    padding: 4px 10px;
-    width: 450px;
+    padding: 8px 15px;
+    width: 600px;
 }
 
 .search-bar, .profile {
@@ -118,7 +119,6 @@ body {
 }
 
 .profile span {
-    font-size: 0.9rem;
     font-weight: 700;
 }
 
@@ -130,7 +130,7 @@ body {
 }
 
 .header-bottom {
-    margin-top: 20px;
+    margin-top: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -152,11 +152,11 @@ body {
     display: flex;
     flex-direction: column;
     font-weight: 700;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 .header-bottom .welcome-message span:first-child{
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 
 .header-bottom .actions {
@@ -173,7 +173,7 @@ body {
     background-color: var(--primary-color);
     color: white;
     font-family: inherit;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-weight: 700;
     cursor: pointer;
 }
@@ -190,8 +190,8 @@ body {
 }
 
 .main-content h2 {
-    font-size: 1.1rem;
-    margin-bottom: 12px;
+    font-size: 1.2rem;
+    margin-bottom: 16px;
 }
 
 .projects {
@@ -200,8 +200,8 @@ body {
 
 .projects-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    font-size: 0.9rem;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-auto-rows: 1fr;
     gap: 20px;
 }
 
@@ -212,7 +212,6 @@ body {
     border-left: solid 8px var(--secondary-color);
     border-radius: 10px;
     padding: 20px;
-    font-size: 0.8rem;
 }
 
 .projects-container .project .icons {
