--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ body {
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
     grid-template-areas:
-    "sidebar header header"
-    "sidebar main main";
+    "sidebar header"
+    "sidebar main";
     height: 100vh;
     font-family: "Roboto", var(---font-stack);
 }
@@ -202,7 +202,7 @@ body {
 .projects-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-auto-rows: 1fr;
+    grid-auto-rows: 242px;
     gap: 20px;
 }
 
